feat: comments service to handle comments and threads, and improve upload behaviour by using presigned urls instead of raw upload.